--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
-    "prisma": "^3.2.1",
+    "prisma": "3.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "@prisma/client": "3.2.1"
   }
 }
